--- a/src/BulkValidation.Pgsql.Benchmarks/BulkValidation.Pgsql.Benchmarks.csproj
+++ b/src/BulkValidation.Pgsql.Benchmarks/BulkValidation.Pgsql.Benchmarks.csproj
@@ -23,6 +23,9 @@
     <ItemGroup>
       <ProjectReference Include="..\BulkValidation.Core\BulkValidation.Core.csproj" />
       <ProjectReference Include="..\BulkValidation.Pgsql\BulkValidation.Pgsql.csproj" />
+        <ProjectReference Include="..\BulkValidation.SourceGeneration\BulkValidation.SourceGeneration\BulkValidation.SourceGeneration.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false"/>
     </ItemGroup>
 
 </Project>
