--- a/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.Sample/BulkValidation.SourceGeneration.Sample.csproj
+++ b/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.Sample/BulkValidation.SourceGeneration.Sample.csproj
@@ -4,14 +4,15 @@
         <TargetFramework>net10.0</TargetFramework>
         <Nullable>enable</Nullable>
         <RootNamespace>BulkValidation.SourceGeneration.Sample</RootNamespace>
-        <EntitesProject>BulkValidation.SourceGeneration.Sample</EntitesProject>
+        <EntitiesProject>BulkValidation.SourceGeneration.Sample</EntitiesProject>
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\..\BulkValidation.Core\BulkValidation.Core.csproj" />
         <ProjectReference Include="..\BulkValidation.SourceGeneration\BulkValidation.SourceGeneration.csproj" 
                           OutputItemType="Analyzer" 
                           ReferenceOutputAssembly="false"/>
-        <CompilerVisibleProperty Include="EntitesProject"/>
+        <CompilerVisibleProperty Include="EntitiesProject"/>
     </ItemGroup>
 
 </Project>
