Update test command to use EF.BulkValidation solution

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,4 +39,4 @@ jobs:
       run: dotnet build EF.BulkValidation.sln --no-restore
 
     - name: Test
-      run: dotnet test ECommerceSpareParts.sln --no-build --verbosity normal
+      run: dotnet test EF.BulkValidation.sln --no-build --verbosity normal
