--- a/src/BulkValidation.Base/BulkValidation.Base.csproj
+++ b/src/BulkValidation.Base/BulkValidation.Base.csproj
@@ -4,6 +4,21 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+
+        <PackageId>BulkValidation.Base</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Diyar Tashliyan</Authors>
+        <Description>BulkValidation.Base project for Bulk Validation library.
+            For full documentation, see the README on GitHub: https://github.com/UnidentifiedSheep/EF.BulkValidation
+        </Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>EntityFrameworkCore;Validation;Bulk;EF</PackageTags>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Title>EF Bulk Validation</Title>
     </PropertyGroup>
 
     <ItemGroup>
@@ -11,8 +26,12 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="10.0.0" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\BulkValidation.Core\BulkValidation.Core.csproj" />
+    <ItemGroup Condition="'$(IsPackable)' == 'true'">
+        <PackageReference Include="BulkValidation.Core" Version="1.0.0" />
     </ItemGroup>
+    <ItemGroup Condition="'$(IsPackable)' != 'true'">
+        <ProjectReference Include="..\BulkValidation.Core\BulkValidation.Core.csproj" />
+    </ItemGroup>
+
 
 </Project>
