--- a/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.csproj
+++ b/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <TargetFramework>netstandard2.1</TargetFramework>
-        <IsPackable>false</IsPackable>
+        <IsPackable>true</IsPackable>
         <Nullable>enable</Nullable>
         <LangVersion>latest</LangVersion>
 
@@ -10,7 +10,21 @@
         <IsRoslynComponent>true</IsRoslynComponent>
 
         <RootNamespace>BulkValidation.SourceGeneration</RootNamespace>
+
         <PackageId>BulkValidation.SourceGeneration</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Diyar Tashliyan</Authors>
+        <Description>BulkValidation.SourceGeneration project for Bulk Validation library.
+            For full documentation, see the README on GitHub: https://github.com/UnidentifiedSheep/EF.BulkValidation
+        </Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>EntityFrameworkCore;Validation;Bulk;EF;SourceGeneration</PackageTags>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Title>EF Bulk Validation</Title>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,9 +32,7 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0"/>
-        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.3.0"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" PrivateAssets="all"/>
+        <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.3.0" PrivateAssets="all"/>
     </ItemGroup>
-
-
 </Project>
