--- a/src/Pgsql/BulkValidation.Pgsql/BulkValidation.Pgsql.csproj
+++ b/src/Pgsql/BulkValidation.Pgsql/BulkValidation.Pgsql.csproj
@@ -4,15 +4,33 @@
         <TargetFramework>net10.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+
+        <PackageId>BulkValidation.Pgsql</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Diyar Tashliyan</Authors>
+        <Description>BulkValidation.Pgsql project for Bulk Validation library.
+            For full documentation, see the README on GitHub: https://github.com/UnidentifiedSheep/EF.BulkValidation
+        </Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageProjectUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation</PackageProjectUrl>
+        <RepositoryUrl>https://github.com/UnidentifiedSheep/EF.BulkValidation.git</RepositoryUrl>
+        <RepositoryType>git</RepositoryType>
+        <PackageTags>EntityFrameworkCore;Validation;Bulk;EF</PackageTags>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+        <Title>EF Bulk Validation</Title>
     </PropertyGroup>
 
-    <ItemGroup>
-      <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
+    <ItemGroup Condition="'$(IsPackable)' != 'true'">
+        <ProjectReference Include="..\..\BulkValidation.Base\BulkValidation.Base.csproj" />
+        <ProjectReference Include="..\..\BulkValidation.Core\BulkValidation.Core.csproj" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     </ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\..\BulkValidation.Base\BulkValidation.Base.csproj" />
-      <ProjectReference Include="..\..\BulkValidation.Core\BulkValidation.Core.csproj" />
+    <ItemGroup Condition="'$(IsPackable)' == 'true'">
+        <PackageReference Include="BulkValidation.Base" Version="1.0.0" />
+        <PackageReference Include="BulkValidation.Core" Version="1.0.0" />
+        <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="10.0.0" />
     </ItemGroup>
 
 </Project>
