--- a/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.csproj
+++ b/src/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration/BulkValidation.SourceGeneration.csproj
@@ -12,7 +12,7 @@
         <RootNamespace>BulkValidation.SourceGeneration</RootNamespace>
 
         <PackageId>BulkValidation.SourceGeneration</PackageId>
-        <Version>1.0.0</Version>
+        <Version>1.0.1</Version>
         <Authors>Diyar Tashliyan</Authors>
         <Description>BulkValidation.SourceGeneration project for Bulk Validation library.
             For full documentation, see the README on GitHub: https://github.com/UnidentifiedSheep/EF.BulkValidation
@@ -35,4 +35,13 @@
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.3.0" PrivateAssets="all"/>
         <PackageReference Include="Microsoft.CodeAnalysis.CSharp.Workspaces" Version="4.3.0" PrivateAssets="all"/>
     </ItemGroup>
+
+    <Target Name="AddAnalyzerToPackage" AfterTargets="Build">
+        <ItemGroup>
+            <None Include="$(OutputPath)$(AssemblyName).dll"
+                  Pack="true"
+                  PackagePath="analyzers/dotnet/cs" />
+        </ItemGroup>
+    </Target>
+
 </Project>
